--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,42 +61,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/btnRexistrarse"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="232dp"
+        android:onClick="onClickRexistrarse"
+        android:text="Rexistrarse"
+        app:layout_constraintStart_toEndOf="@+id/btnEntrar"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/btnEntrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="170dp"
-        android:layout_marginTop="276dp"
-        android:layout_marginEnd="153dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="232dp"
         android:onClick="onClickEntrar"
         android:text="Entrar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioGroup
-        android:id="@+id/radioGrupo"
-        android:layout_width="169dp"
-        android:layout_height="67dp"
-        android:layout_marginEnd="75dp"
-        android:baselineAligned="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.99"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TXTPass">
-
-        <RadioButton
-            android:id="@+id/radioAdministrador"
-            android:layout_width="138dp"
-            android:layout_height="wrap_content"
-            android:text="Administrador" />
-
-        <RadioButton
-            android:id="@+id/radioCliente"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoText="false"
-            android:text="Cliente" />
-    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
