--- a/app/src/main/res/layout/activity_zona_administrador.xml
+++ b/app/src/main/res/layout/activity_zona_administrador.xml
@@ -72,4 +72,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnEditarAdmin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="60dp"
+        android:text="Editar"
+        app:layout_constraintBottom_toTopOf="@+id/BTNAdminVerPedidosEnTramite"
+        tools:layout_editor_absoluteX="180dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
