--- a/app/src/main/res/layout/activity_zona_clientes.xml
+++ b/app/src/main/res/layout/activity_zona_clientes.xml
@@ -83,4 +83,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnEditarCliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="20dp"
+        android:onClick="onClickEditar"
+        android:text="Editar"
+        app:layout_constraintStart_toEndOf="@+id/BTNSair"
+        app:layout_constraintTop_toBottomOf="@+id/BTNVerComprasRealizadas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
