--- a/app/src/main/res/layout/activity_zona_administrador.xml
+++ b/app/src/main/res/layout/activity_zona_administrador.xml
@@ -77,8 +77,10 @@
         android:id="@+id/btnEditarAdmin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="60dp"
         android:layout_marginBottom="60dp"
+        android:onClick="onClickEditar"
         android:text="Editar"
         app:layout_constraintBottom_toTopOf="@+id/BTNAdminVerPedidosEnTramite"
-        tools:layout_editor_absoluteX="180dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
