--- a/app/src/main/res/layout/activity_rexistrarse.xml
+++ b/app/src/main/res/layout/activity_rexistrarse.xml
@@ -7,14 +7,24 @@
     tools:context=".Intents.Rexistrarse">
 
     <Button
+        android:id="@+id/BTNVolverAdminAceptados7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="volver"
+        android:text="Volver"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="148dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="32dp"
         android:onClick="onClickRexistrarse"
         android:text="Rexistrarse"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.993"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGrupo" />
 
@@ -33,7 +43,7 @@
         android:id="@+id/TXTNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="60dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -44,7 +54,7 @@
         android:id="@+id/LBLEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="180dp"
         android:text="Email"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +75,7 @@
         android:id="@+id/LBLUsuario3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="292dp"
         android:text="Contrasinal"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +85,7 @@
         android:id="@+id/LBLApelidos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="132dp"
         android:text="Apelidos"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,11 +95,10 @@
         android:id="@+id/btnSacarFoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
         android:onClick="onClickSacarFoto"
         android:text="Sacar foto"
         app:layout_constraintBottom_toTopOf="@+id/imgView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.284"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TXTContrasinal"
         app:layout_constraintVertical_bias="0.666" />
@@ -98,7 +107,7 @@
         android:id="@+id/LBLNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="72dp"
         android:text="Nome"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +117,7 @@
         android:id="@+id/TXTUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="224dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -119,7 +128,7 @@
         android:id="@+id/TXTContrasinal"
         android:layout_width="213dp"
         android:layout_height="45dp"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPassword"
@@ -130,9 +139,9 @@
         android:id="@+id/imgView"
         android:layout_width="89dp"
         android:layout_height="80dp"
-        android:layout_marginStart="4dp"
         android:layout_marginTop="72dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGrupo"
+        android:layout_marginEnd="125dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TXTContrasinal"
         app:srcCompat="@android:drawable/alert_light_frame" />
 
@@ -140,7 +149,7 @@
         android:id="@+id/TXTEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="168dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -151,7 +160,7 @@
         android:id="@+id/LBLUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="240dp"
         android:text="Usuario"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,11 +170,9 @@
         android:id="@+id/radioGrupo"
         android:layout_width="169dp"
         android:layout_height="67dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="72dp"
-        android:layout_marginEnd="75dp"
         android:baselineAligned="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.586"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TXTContrasinal">
 
@@ -187,7 +194,7 @@
         android:id="@+id/TXTApelidos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="112dp"
         android:ems="10"
         android:inputType="textPersonName"
