--- a/app/src/main/res/layout/activity_facer_pedido.xml
+++ b/app/src/main/res/layout/activity_facer_pedido.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Intents.FacerPedido">
 
+    <Button
+        android:id="@+id/BTNVolverAdminAceptados5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="volver"
+        android:text="Volver"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Spinner
         android:id="@+id/spinner_tipo_producto"
         android:layout_width="409dp"
@@ -59,10 +70,11 @@
         android:id="@+id/spinner_cantidade"
         android:layout_width="170dp"
         android:layout_height="29dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="64dp"
         android:entries="@array/cantidades"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_productos"
-        tools:layout_editor_absoluteX="28dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_productos" />
 
     <TextView
         android:id="@+id/LBLCantidad"
