--- a/app/src/main/res/layout/activity_finalizar_pedido.xml
+++ b/app/src/main/res/layout/activity_finalizar_pedido.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".Intents.FinalizarPedido">
 
+    <Button
+        android:id="@+id/BTNVolverAdminAceptados6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="volver"
+        android:text="Volver"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/TXTFinalizarPedido"
         android:layout_width="wrap_content"
